--- a/prepros.cfg
+++ b/prepros.cfg
@@ -599,6 +599,121 @@
           "optimized": false,
           "height": 5,
           "width": 49
+        },
+        "50eecf2d": {
+          "id": "50eecf2d",
+          "path": "css/frontend.css",
+          "output": "css/frontend-dist.css",
+          "name": "frontend.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "7e3a8ced": {
+          "id": "7e3a8ced",
+          "path": "articles.html",
+          "output": "articles.html",
+          "name": "articles.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "58b090bf": {
+          "id": "58b090bf",
+          "path": "blog.html",
+          "output": "blog.html",
+          "name": "blog.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "1f701288": {
+          "id": "1f701288",
+          "path": "certificates.html",
+          "output": "certificates.html",
+          "name": "certificates.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "0cd5707b": {
+          "id": "0cd5707b",
+          "path": "collars.html",
+          "output": "collars.html",
+          "name": "collars.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "0d7e82ea": {
+          "id": "0d7e82ea",
+          "path": "company.html",
+          "output": "company.html",
+          "name": "company.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "7cf6132d": {
+          "id": "7cf6132d",
+          "path": "contacts.html",
+          "output": "contacts.html",
+          "name": "contacts.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "80141f9b": {
+          "id": "80141f9b",
+          "path": "custom_pallets.html",
+          "output": "custom_pallets.html",
+          "name": "custom_pallets.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "5d6edd2d": {
+          "id": "5d6edd2d",
+          "path": "pallets_cp.html",
+          "output": "pallets_cp.html",
+          "name": "pallets_cp.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "c5beab2c": {
+          "id": "c5beab2c",
+          "path": "solutions.html",
+          "output": "solutions.html",
+          "name": "solutions.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
